--- a/bin/Jupyter Notebooks.ipynb
+++ b/bin/Jupyter Notebooks.ipynb
@@ -25,17 +25,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "123\n"
+     "text": "1\n"
     }
    ],
    "source": [
-    "print 123"
+    "try:\n",
+    "    # for Python2\n",
+    "    import Tkinter as tk\n",
+    "    # for Python3\n",
+    "    import tkinter as tk\n",
+    "\n",
+    "print 1\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ]
