--- a/jupyterNotebook/JN-MATLAB.ipynb
+++ b/jupyterNotebook/JN-MATLAB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "from __future__ import print_function\n",
     "import sys\n",
     "import os\n",
-    "sys.path.append(os.path.join(\"..\", \"..\"))\n",
+    "sys.path.append(os.path.join(\"..\"))\n",
     "import libPython.core.util"
    ]
   },
