--- a/jupyterNotebook/JN-Util.ipynb
+++ b/jupyterNotebook/JN-Util.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -40,16 +40,16 @@
       "[os.system()]\n",
       "0\n",
       "[os.popen()]\n",
-      "total 20\n",
+      "total 16\n",
       "-rw-r--r-- 1 cloud cloud 3484 Feb 15 21:55 JN-MATLAB.ipynb\n",
       "-rw-r--r-- 1 cloud cloud 4258 Feb 15 21:55 JN-Main.ipynb\n",
-      "-rw-r--r-- 1 cloud cloud 4872 Feb 15 22:31 JN-Util.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud 3700 Feb 15 22:36 JN-Util.ipynb\n",
       "\n",
       "[subprocess.popen() - Text Mode]\n",
-      "total 20\n",
+      "total 16\n",
       "-rw-r--r-- 1 cloud cloud 3484 Feb 15 21:55 JN-MATLAB.ipynb\n",
       "-rw-r--r-- 1 cloud cloud 4258 Feb 15 21:55 JN-Main.ipynb\n",
-      "-rw-r--r-- 1 cloud cloud 4872 Feb 15 22:31 JN-Util.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud 3700 Feb 15 22:36 JN-Util.ipynb\n",
       "\n"
      ]
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -85,16 +85,18 @@
       "[os.system()]\n",
       "0\n",
       "[os.popen()]\n",
-      "total 20\n",
+      "total 16\n",
       "-rw-r--r-- 1 cloud cloud 3484 Feb 15 21:55 JN-MATLAB.ipynb\n",
       "-rw-r--r-- 1 cloud cloud 4258 Feb 15 21:55 JN-Main.ipynb\n",
-      "-rw-r--r-- 1 cloud cloud 4872 Feb 15 22:31 JN-Util.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud 3700 Feb 15 22:36 JN-Util.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud    0 Feb 15 22:38 中文檔名\n",
       "\n",
       "[subprocess.popen()] - universal_newlines default = False\n",
-      "total 20\n",
+      "total 16\n",
       "-rw-r--r-- 1 cloud cloud 3484 Feb 15 21:55 JN-MATLAB.ipynb\n",
       "-rw-r--r-- 1 cloud cloud 4258 Feb 15 21:55 JN-Main.ipynb\n",
-      "-rw-r--r-- 1 cloud cloud 4872 Feb 15 22:31 JN-Util.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud 3700 Feb 15 22:36 JN-Util.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud    0 Feb 15 22:38 中文檔名\n",
       "\n"
      ]
     }
