--- a/jupyterNotebook/JN-Util.ipynb
+++ b/jupyterNotebook/JN-Util.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -85,19 +85,30 @@
       "[os.system()]\n",
       "0\n",
       "[os.popen()]\n",
-      "total 16\n",
+      "total 20\n",
       "-rw-r--r-- 1 cloud cloud 3484 Feb 15 21:55 JN-MATLAB.ipynb\n",
       "-rw-r--r-- 1 cloud cloud 4258 Feb 15 21:55 JN-Main.ipynb\n",
-      "-rw-r--r-- 1 cloud cloud 3700 Feb 15 22:36 JN-Util.ipynb\n",
-      "-rw-r--r-- 1 cloud cloud    0 Feb 15 22:38 中文檔名\n",
+      "-rw-r--r-- 1 cloud cloud 4883 Mar  2 20:11 JN-Util.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud    0 Mar  2 20:01 中文檔名\n",
       "\n",
       "[subprocess.popen()] - universal_newlines default = False\n",
-      "total 16\n",
+      "total 20\n",
       "-rw-r--r-- 1 cloud cloud 3484 Feb 15 21:55 JN-MATLAB.ipynb\n",
       "-rw-r--r-- 1 cloud cloud 4258 Feb 15 21:55 JN-Main.ipynb\n",
-      "-rw-r--r-- 1 cloud cloud 3700 Feb 15 22:36 JN-Util.ipynb\n",
-      "-rw-r--r-- 1 cloud cloud    0 Feb 15 22:38 中文檔名\n",
-      "\n"
+      "-rw-r--r-- 1 cloud cloud 4883 Mar  2 20:11 JN-Util.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud    0 Mar  2 20:01 中文檔名\n",
+      "\n",
+      "stdout:\n",
+      "total 20\n",
+      "-rw-r--r-- 1 cloud cloud 3484 Feb 15 21:55 JN-MATLAB.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud 4258 Feb 15 21:55 JN-Main.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud 4883 Mar  2 20:11 JN-Util.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud    0 Mar  2 20:01 中文檔名\n",
+      "\n",
+      "stderr:\n",
+      "\n",
+      "return code:\n",
+      "0\n"
      ]
     }
    ],
@@ -112,7 +123,15 @@
     "\n",
     "import subprocess\n",
     "print(\"[subprocess.popen()] - universal_newlines default = False\")\n",
-    "print(subprocess.Popen(\"ls -l\",stdout=subprocess.PIPE).stdout.read().decode(encoding='utf8'))\n"
+    "print(subprocess.Popen(\"ls -l\",stdout=subprocess.PIPE).stdout.read().decode(encoding='utf8'))\n",
+    "\n",
+    "# ---\n",
+    "import shlex\n",
+    "print(\"[subprocess.run()] - universal_newlines default = False\")\n",
+    "output=subprocess.run(shlex.split(\"ls -l\"), stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "print(\"stdout:\\n\" + output.stdout.decode(encoding='utf8'))\n",
+    "print(\"stderr:\\n\" + output.stderr.decode(encoding='utf8'))\n",
+    "print(\"return code:\\n\" + str(output.returncode))\n"
    ]
   }
  ],
