--- a/jupyterNotebook/JN-Util.ipynb
+++ b/jupyterNotebook/JN-Util.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -88,21 +88,22 @@
       "total 20\n",
       "-rw-r--r-- 1 cloud cloud 3484 Feb 15 21:55 JN-MATLAB.ipynb\n",
       "-rw-r--r-- 1 cloud cloud 4258 Feb 15 21:55 JN-Main.ipynb\n",
-      "-rw-r--r-- 1 cloud cloud 4883 Mar  2 20:11 JN-Util.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud 4654 Mar  2 20:11 JN-Util.ipynb\n",
       "-rw-r--r-- 1 cloud cloud    0 Mar  2 20:01 中文檔名\n",
       "\n",
-      "[subprocess.popen()] - universal_newlines default = False\n",
+      "[subprocess.popen() (async)] - universal_newlines default = False\n",
       "total 20\n",
       "-rw-r--r-- 1 cloud cloud 3484 Feb 15 21:55 JN-MATLAB.ipynb\n",
       "-rw-r--r-- 1 cloud cloud 4258 Feb 15 21:55 JN-Main.ipynb\n",
-      "-rw-r--r-- 1 cloud cloud 4883 Mar  2 20:11 JN-Util.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud 4654 Mar  2 20:11 JN-Util.ipynb\n",
       "-rw-r--r-- 1 cloud cloud    0 Mar  2 20:01 中文檔名\n",
       "\n",
+      "[subprocess.run() (sync)] - universal_newlines default = False\n",
       "stdout:\n",
       "total 20\n",
       "-rw-r--r-- 1 cloud cloud 3484 Feb 15 21:55 JN-MATLAB.ipynb\n",
       "-rw-r--r-- 1 cloud cloud 4258 Feb 15 21:55 JN-Main.ipynb\n",
-      "-rw-r--r-- 1 cloud cloud 4883 Mar  2 20:11 JN-Util.ipynb\n",
+      "-rw-r--r-- 1 cloud cloud 4654 Mar  2 20:11 JN-Util.ipynb\n",
       "-rw-r--r-- 1 cloud cloud    0 Mar  2 20:01 中文檔名\n",
       "\n",
       "stderr:\n",
@@ -122,12 +123,12 @@
     "print(pip.buffer.read().decode(encoding='utf8'))\n",
     "\n",
     "import subprocess\n",
-    "print(\"[subprocess.popen()] - universal_newlines default = False\")\n",
+    "print(\"[subprocess.popen() (async)] - universal_newlines default = False\")\n",
     "print(subprocess.Popen(\"ls -l\",stdout=subprocess.PIPE).stdout.read().decode(encoding='utf8'))\n",
     "\n",
     "# ---\n",
     "import shlex\n",
-    "print(\"[subprocess.run()] - universal_newlines default = False\")\n",
+    "print(\"[subprocess.run() (sync)] - universal_newlines default = False\")\n",
     "output=subprocess.run(shlex.split(\"ls -l\"), stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
     "print(\"stdout:\\n\" + output.stdout.decode(encoding='utf8'))\n",
     "print(\"stderr:\\n\" + output.stderr.decode(encoding='utf8'))\n",
