data_series, parse timestamp & key value, f-string format

--- a/jupyterNotebook/JN-Util.ipynb
+++ b/jupyterNotebook/JN-Util.ipynb
@@ -134,6 +134,59 @@
     "print(\"stderr:\\n\" + output.stderr.decode(encoding='utf8'))\n",
     "print(\"return code:\\n\" + str(output.returncode))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[f-string format]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is 3.1415926\n",
+      "The number is 3.14\n",
+      "The number is +3.14\n",
+      "The number is 3\n",
+      "The number is 003.1\n",
+      "The number is 3.100\n",
+      "The number is **3.1\n",
+      "The number is 3.1**\n",
+      "The number is 314.16% 3.14e+00\n",
+      "The number is 3,141.5926\n",
+      "The number is             3.141593\n",
+      "The number is 3.141593            \n",
+      "The number is       3.141593      \n",
+      "The number is 11111111 255 377 ff\n"
+     ]
+    }
+   ],
+   "source": [
+    "var = 3.1415926\n",
+    "var_int = 255\n",
+    "\n",
+    "print(f\"The number is {var}\")\n",
+    "print(f\"The number is {var:.2f}\")\n",
+    "print(f\"The number is {var:+.2f}\")\n",
+    "print(f\"The number is {var:.0f}\")\n",
+    "print(f\"The number is {var:0>5.1f}\")\n",
+    "print(f\"The number is {var:0<5.1f}\")\n",
+    "print(f\"The number is {var:*>5.1f}\")\n",
+    "print(f\"The number is {var:*<5.1f}\")\n",
+    "print(f\"The number is {var:.2%} {var:.2e}\")\n",
+    "print(f\"The number is {var*1000:,}\")\n",
+    "print(f\"The number is {var:>20f}\")\n",
+    "print(f\"The number is {var:<20f}\")\n",
+    "print(f\"The number is {var:^20f}\") #置中對齊\n",
+    "print(f\"The number is {var_int:b} {var_int:d} {var_int:o} {var_int:x}\") #二進制、十進制、八進制、十六進制"
+   ]
   }
  ],
  "metadata": {
