--- a/jupyterNotebook/JN-Plotly.ipynb
+++ b/jupyterNotebook/JN-Plotly.ipynb
@@ -1506,6 +1506,83 @@
     "fig = px.bar(df, x=df.index, y=[df[\"GOOG\"],df[\"FB\"]])\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import argparse \n",
+    "parser = argparse. ArgumentParser(description='\"find\" utility for cscope index use.') \n",
+    "parser.add_argument('-a', nargs='?', ) \n",
+    "parser.add_argument('--simpleperf_cmd', nargs='?', type=str, default=False, const=\"-e cpu-cycles --call-graph fp\", \n",
+    "help='try Simpleperf profiling if support. In \n",
+    "Given string is for \"simpleperf record\" argument, default is \"-e cpu-cycles --call-graph fp\". In \n",
+    "Here are some examples: \"-e raw-13d-cache-refill -a --call-graph fp\",...') # args = parser.parse_args() \n",
+    "L \n",
+    "L \n",
+    "args = parser.parse_args ( [\"--sim\", \"a b c\"]) args = parser.parse_args ( [\"--sim\"]) args = parser.parse_args ( [\"-9\"]) \n",
+    "L \n",
+    "U \n",
+    "print(args.sim) if args.sim: \n",
+    "print(\"YAYAYA=\", args.sim) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: ipykernel_launcher.py [-h] [-a [A]] [--simpleperf_cmd [SIMPLEPERF_CMD]]\n",
+      "\n",
+      "\"find\" utility for cscope index use.\n",
+      "\n",
+      "optional arguments:\n",
+      "  -h, --help            show this help message and exit\n",
+      "  -a [A]\n",
+      "  --simpleperf_cmd [SIMPLEPERF_CMD]\n",
+      "                        try Simpleperf profiling if support. Given string is\n",
+      "                        for \"simpleperf record\" argument, default is \"-e cpu-\n",
+      "                        cycles --call-graph fp\". Here are some examples: \"-e\n",
+      "                        raw-|3d-cache-refill -a --call-graph fp\",...\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import argparse\n",
+    "parser = argparse.ArgumentParser(description='\"find\" utility for cscope index use.')\n",
+    "\n",
+    "parser.add_argument('-a', nargs='?', )\n",
+    "parser.add_argument('--simpleperf_cmd', nargs='?', type=str, default=False, const=\"-e cpu-cycles --call-graph fp\",\n",
+    "help='try Simpleperf profiling if support.\\n\\\n",
+    "Given string is for \"simpleperf record\" argument, default is \"-e cpu-cycles --call-graph fp\".\\n\\\n",
+    "Here are some examples: \"-e raw-|3d-cache-refill -a --call-graph fp\",...')\n",
+    "# args = parser.parse_args()\n",
+    "\n",
+    "args = parser.parse_args( [\"--sim\", \"a b c\"])\n",
+    "args = parser.parse_args( [\"--sim\"])\n",
+    "args = parser.parse_args( [\"-h\"])\n",
+    "\n",
+    "  \n",
+    "\n",
+    "print(args.sim)\n",
+    "if args.sim:\n",
+    "    print(\"YAYAYA=\",args.sim)"
+   ]
   }
  ],
  "metadata": {
