--- a/jupyterNotebook/JN-Pandas.ipynb
+++ b/jupyterNotebook/JN-Pandas.ipynb
@@ -11,18 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'1.3.5'"
-      ]
-     },
-     "execution_count": 273,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'libPython'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000001?line=6'>7</a>\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39mC:\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mUsers\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mcloud\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mOneDrive\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mBIN\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mcls-toolbox\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000001?line=7'>8</a>\u001b[0m \u001b[39m#................................................................................\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000001?line=8'>9</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mlibPython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutil\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mutil\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000001?line=9'>10</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mlibPython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutil_ex\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mutil_ex\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000001?line=12'>13</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'libPython'"
+     ]
     }
    ],
    "source": [
@@ -32,7 +33,7 @@
     "#................................................................................\n",
     "# Add libPython\\.. into PYTHONPATH\n",
     "import sys\n",
-    "sys.path.append(r'C:\\Users\\cloud\\OneDrive\\BIN\\cls-toolbox')\n",
+    "sys.path.append(r'..')\n",
     "#................................................................................\n",
     "import libPython.core.util as util\n",
     "import libPython.core.util_ex as util_ex\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -683,58 +684,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Height</th>\n",
-       "      <th>100xAges</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Vivian</td>\n",
-       "      <td>55</td>\n",
-       "      <td>female</td>\n",
-       "      <td>168</td>\n",
-       "      <td>5500</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Name  Age     Sex  Height  100xAges\n",
-       "1  Vivian   55  female     168      5500"
-      ]
-     },
-     "execution_count": 256,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb Cell 15'\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000014?line=0'>1</a>\u001b[0m \u001b[39m#...................................\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000014?line=1'>2</a>\u001b[0m \u001b[39m# 字串操作\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000014?line=2'>3</a>\u001b[0m \u001b[39m#...................................\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000014?line=3'>4</a>\u001b[0m df[df[\u001b[39m'\u001b[39m\u001b[39mName\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39misin([\u001b[39m'\u001b[39m\u001b[39mVivian\u001b[39m\u001b[39m'\u001b[39m])]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000014?line=4'>5</a>\u001b[0m df[df[\u001b[39m'\u001b[39m\u001b[39mName\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mcontains(\u001b[39m'\u001b[39m\u001b[39mVivi\u001b[39m\u001b[39m'\u001b[39m)]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -754,106 +716,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4 entries, 0 to 3\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column    Non-Null Count  Dtype \n",
-      "---  ------    --------------  ----- \n",
-      " 0   Name      4 non-null      object\n",
-      " 1   Age       4 non-null      int64 \n",
-      " 2   Sex       4 non-null      object\n",
-      " 3   Height    4 non-null      int64 \n",
-      " 4   100xAges  4 non-null      int64 \n",
-      "dtypes: int64(3), object(2)\n",
-      "memory usage: 288.0+ bytes\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb Cell 17'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000016?line=0'>1</a>\u001b[0m df\u001b[39m.\u001b[39mindex\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000016?line=1'>2</a>\u001b[0m df\u001b[39m.\u001b[39mcolumns\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000016?line=2'>3</a>\u001b[0m \u001b[39m#...................................\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000016?line=3'>4</a>\u001b[0m \u001b[39m# 數值統計資料\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000016?line=4'>5</a>\u001b[0m \u001b[39m#...................................\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Height</th>\n",
-       "      <th>100xAges</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Name   Age   Sex  Height  100xAges\n",
-       "0  True  True  True    True      True\n",
-       "1  True  True  True    True      True\n",
-       "2  True  True  True    True      True\n",
-       "3  True  True  True    True      True"
-      ]
-     },
-     "execution_count": 267,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "df.index\n",
+    "df.columns\n",
     "#...................................\n",
     "# 數值統計資料\n",
     "#...................................\n",
@@ -3690,7 +3570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.10"
   },
   "metadata": {
    "interpreter": {
