--- a/jupyterNotebook/JN-Pandas.ipynb
+++ b/jupyterNotebook/JN-Pandas.ipynb
@@ -11,19 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'libPython'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000001?line=6'>7</a>\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39mC:\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mUsers\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mcloud\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mOneDrive\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mBIN\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mcls-toolbox\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000001?line=7'>8</a>\u001b[0m \u001b[39m#................................................................................\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000001?line=8'>9</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mlibPython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutil\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mutil\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000001?line=9'>10</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mlibPython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutil_ex\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mutil_ex\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000001?line=12'>13</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'libPython'"
-     ]
+     "data": {
+      "text/plain": [
+       "'1.4.1'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +122,7 @@
        "3     Claire    9  female     150"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +201,7 @@
        "2  Latis Lee   12    male"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +242,7 @@
        "Name: Clouds, dtype: int64"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +325,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Clouds</td>\n",
-       "      <td>45.0</td>\n",
+       "      <td>45</td>\n",
        "      <td>male</td>\n",
        "      <td>170</td>\n",
        "      <td>4500</td>\n",
@@ -334,7 +333,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Vivian</td>\n",
-       "      <td>55.0</td>\n",
+       "      <td>55</td>\n",
        "      <td>female</td>\n",
        "      <td>168</td>\n",
        "      <td>5500</td>\n",
@@ -342,7 +341,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Latis Lee</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>12</td>\n",
        "      <td>male</td>\n",
        "      <td>180</td>\n",
        "      <td>1200</td>\n",
@@ -350,7 +349,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Claire</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>9</td>\n",
        "      <td>female</td>\n",
        "      <td>150</td>\n",
        "      <td>900</td>\n",
@@ -360,14 +359,14 @@
        "</div>"
       ],
       "text/plain": [
-       "        Name    年齡     Sex  Height  100xAges\n",
-       "0     Clouds  45.0    male     170      4500\n",
-       "1     Vivian  55.0  female     168      5500\n",
-       "2  Latis Lee  12.0    male     180      1200\n",
-       "3     Claire   9.0  female     150       900"
+       "        Name  年齡     Sex  Height  100xAges\n",
+       "0     Clouds  45    male     170      4500\n",
+       "1     Vivian  55  female     168      5500\n",
+       "2  Latis Lee  12    male     180      1200\n",
+       "3     Claire   9  female     150       900"
       ]
      },
-     "execution_count": 429,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +469,7 @@
        "3     Mr Claire   Mr 9  Mr female  Mr 150   Mr 900"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +562,7 @@
        "3     Claire   9.0  female     150       900"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +614,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Mr. Clouds</td>\n",
-       "      <td>45</td>\n",
+       "      <td>45.0</td>\n",
        "      <td>male</td>\n",
        "      <td>170</td>\n",
        "      <td>4500</td>\n",
@@ -623,7 +622,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Ms. Vivian</td>\n",
-       "      <td>55</td>\n",
+       "      <td>55.0</td>\n",
        "      <td>female</td>\n",
        "      <td>168</td>\n",
        "      <td>5500</td>\n",
@@ -631,7 +630,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Mr. Latis Lee</td>\n",
-       "      <td>12</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>male</td>\n",
        "      <td>180</td>\n",
        "      <td>1200</td>\n",
@@ -639,7 +638,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Ms. Claire</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>female</td>\n",
        "      <td>150</td>\n",
        "      <td>900</td>\n",
@@ -649,14 +648,14 @@
        "</div>"
       ],
       "text/plain": [
-       "            Name  Age     Sex  Height  100xAges\n",
-       "0     Mr. Clouds   45    male     170      4500\n",
-       "1     Ms. Vivian   55  female     168      5500\n",
-       "2  Mr. Latis Lee   12    male     180      1200\n",
-       "3     Ms. Claire    9  female     150       900"
+       "            Name   Age     Sex  Height  100xAges\n",
+       "0     Mr. Clouds  45.0    male     170      4500\n",
+       "1     Ms. Vivian  55.0  female     168      5500\n",
+       "2  Mr. Latis Lee  12.0    male     180      1200\n",
+       "3     Ms. Claire   9.0  female     150       900"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,19 +683,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb Cell 15'\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000014?line=0'>1</a>\u001b[0m \u001b[39m#...................................\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000014?line=1'>2</a>\u001b[0m \u001b[39m# 字串操作\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000014?line=2'>3</a>\u001b[0m \u001b[39m#...................................\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000014?line=3'>4</a>\u001b[0m df[df[\u001b[39m'\u001b[39m\u001b[39mName\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39misin([\u001b[39m'\u001b[39m\u001b[39mVivian\u001b[39m\u001b[39m'\u001b[39m])]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000014?line=4'>5</a>\u001b[0m df[df[\u001b[39m'\u001b[39m\u001b[39mName\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mcontains(\u001b[39m'\u001b[39m\u001b[39mVivi\u001b[39m\u001b[39m'\u001b[39m)]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>100xAges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Vivian</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>168</td>\n",
+       "      <td>5500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Name   Age     Sex  Height  100xAges\n",
+       "1  Vivian  55.0  female     168      5500"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -716,19 +754,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb Cell 17'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000016?line=0'>1</a>\u001b[0m df\u001b[39m.\u001b[39mindex\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000016?line=1'>2</a>\u001b[0m df\u001b[39m.\u001b[39mcolumns\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000016?line=2'>3</a>\u001b[0m \u001b[39m#...................................\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000016?line=3'>4</a>\u001b[0m \u001b[39m# 數值統計資料\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/clouds/bin/cls-toolbox/jupyterNotebook/JN-Pandas.ipynb#ch0000016?line=4'>5</a>\u001b[0m \u001b[39m#...................................\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4 entries, 0 to 3\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   Name      4 non-null      object \n",
+      " 1   Age       4 non-null      float64\n",
+      " 2   Sex       4 non-null      object \n",
+      " 3   Height    4 non-null      int64  \n",
+      " 4   100xAges  4 non-null      int64  \n",
+      "dtypes: float64(1), int64(2), object(2)\n",
+      "memory usage: 288.0+ bytes\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>100xAges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Name   Age   Sex  Height  100xAges\n",
+       "0  True  True  True    True      True\n",
+       "1  True  True  True    True      True\n",
+       "2  True  True  True    True      True\n",
+       "3  True  True  True    True      True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
