--- a/jupyterNotebook/JN-Util.ipynb
+++ b/jupyterNotebook/JN-Util.ipynb
@@ -144,6 +144,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'123 test'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str = \"{var} {var_2}\"\n",
+    "str.format(var=123, var_2=\"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
    "outputs": [
